[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "molot"
description = "Simple execution orchestrator."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["python-dotenv>=1.0.0"]
dynamic = ["version"]
license = { text = "MIT License" }
authors = [{ name = "Mike Gouline" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "build>=1.0.3",
    "twine>=4.0.2",
    "ruff>=0.5.5",
    "mypy>=1.7.1",
    "pytest>=8.3.1",
]

[project.urls]
Homepage = "https://github.com/gouline/molot"

[tool.setuptools]
packages = ["molot"]

[tool.setuptools_scm]
version_file = "molot/_version.py"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
python_version = "3.8"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line-too-long 
    "F403", # undefined-local-with-import-star
]

[tool.ruff.lint.per-file-ignores]
"examples/**.py" = ["F405"]
